--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+---
+layout: layout.liquid
+---
+
+Say Hello
+
+{% for post in collections.post %}
+<h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
+<p>{{ post.content }}</p>
+{% endfor %}
