--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: layout.liquid
     <section class="home__firstview-txt">
       <h1>呼吸書房</h1>
       <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-      <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。出展イベントや委託販売先でもお買い求めいただけます。</p>
+      <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
       <nav>
         <ul>
           <li><a href="">about</a></li>
@@ -30,13 +30,27 @@ layout: layout.liquid
     <div class="home__firstview-images">
       <div class="home__firstview-image">
         <img src="" alt="">
-        <div class="home__firstview-image__txt">
+        <div class="home__firstview-image__txt font-serif">
           <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
           <a href="">『すべての樹木は光』詳細ページへ</a>
         </div>
       </div>
     </div>
   </div>
+  <section class="home__section page-width">
+    <h2>book-list</h2>
+  </section>
+  <section class="home__section page-width">
+    <h2>web-novel</h2>
+  </section>
+  <section class="home__section page-width">
+    <h2>other-work</h2>
+  </section>
+  <section class="home__section page-width">
+    <h2>online-store</h2>
+    BOOTH
+    架空ストア
+  </section>
 </div>
 
 {% for post in collections.post %}
