--- a/index.html
+++ b/index.html
@@ -8,45 +8,51 @@ layout: layout.liquid
       <h1>呼吸書房</h1>
       <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
       <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
-      <nav>
-        <ul>
-          <li><a href="">about</a></li>
-          <li><a href="">event</a></li>
-          <li><a href="">contact</a></li>
-          <li><a href="">book-list</a></li>
-          <li><a href="">web-novel</a></li>
-          <li><a href="">other-work</a></li>
-          <li><a href="">online-store</a></li>
+      <nav class="home__nav">
+        <h2 class="heading heading--default">menu</h2>
+        <ul class="home__nav-list">
+          <li><a href="/about">about</a></li>
+          <li><a href="/event">event</a></li>
+          <li><a href="/contact">contact</a></li>
+          <li><a href="#booklist">book-list</a></li>
+          <li><a href="#webnovel">web-novel</a></li>
+          <li><a href="#otherwork">other-work</a></li>
+          <li><a href="#onlinestore">online-store</a></li>
         </ul>
       </nav>
-      <section>
-        <h2>news</h2>
-        <dl>
+      <section class="home__news">
+        <h2 class="heading heading--default">news</h2>
+        <dl class="home__news-body">
           <dt>2023.2.26</dt>
           <dd><a href="">出店予定：文学フリマ広島「い-16」呼吸書房</a></dd>
         </dl>
       </section>
     </section>
-    <div class="home__firstview-images">
-      <div class="home__firstview-image">
-        <img src="" alt="">
+    <div class="home__firstview-bg__wrapper">
+      <div class="home__firstview-bg">
+        <picture>
+          <img class="home__firstview-image" src="/assets/img/mv_treeislight.jpg" alt="" loading="lazy" width="2000">
+          <figcaption>書籍表紙装画：佐野裕一</figcaption>
+        </picture>
         <div class="home__firstview-image__txt font-serif">
           <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
-          <a href="">『すべての樹木は光』詳細ページへ</a>
+          <div class="align-right">
+            <a href="">『すべての樹木は光』<span>詳細ページへ</span></a>
+          </div> 
         </div>
       </div>
     </div>
   </div>
-  <section class="home__section page-width">
+  <section id="booklist" class="home__section page-width">
     <h2>book-list</h2>
   </section>
-  <section class="home__section page-width">
+  <section id="webnovel" class="home__section page-width">
     <h2>web-novel</h2>
   </section>
-  <section class="home__section page-width">
+  <section id="otherwork" class="home__section page-width">
     <h2>other-work</h2>
   </section>
-  <section class="home__section page-width">
+  <section id="onlinestore" class="home__section page-width">
     <h2>online-store</h2>
     BOOTH
     架空ストア
