--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: layout.liquid
         <div class="home__firstview-image__txt font-serif">
           <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
           <div class="align-right">
-            <a href="">『すべての樹木は光』<span>詳細ページへ</span></a>
+            <a href="/novel/trees-light/">『すべての樹木は光』<span>詳細ページへ</span></a>
           </div> 
         </div>
       </div>
@@ -59,7 +59,14 @@ layout: layout.liquid
   </section>
 </div>
 
+
+小説をタグで絞り込めないかな
+あとできればMarkdownで改行を有効にしたいんだが。。
 {% for post in collections.post %}
 <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
 <p>{{ post.content }}</p>
+{% endfor %}
+
+{% for novel in collections.novel %}
+<h2><a href="{{ novel.url }}">{{ novel.data.title }}</a></h2>
 {% endfor %}
