--- a/index.html
+++ b/index.html
@@ -44,7 +44,51 @@ layout: layout.liquid
     </div>
   </div>
   <section id="booklist" class="home__section page-width">
-    <h2>book-list</h2>
+    <header class="home__section-title">
+      <h2 class="heading home__section-heading">book-list</h2>
+      <p class="home__section-title-txt">書籍一覧</p>
+    </header>
+    {%- assign novels-info-title = '『walking postcard vol.6』, 
+    『彼らは唯の夢』, 
+    『すべての樹木は光』, 
+    『永遠の不在をめぐる』, 
+    『青と茜と砂漠の国』, 
+    『竜の花嫁』, 
+    『旅人よ立ち止まれ』, 
+    『紙飛行機に眠る月』' | split: ', ' -%}
+    {%- assign novels-info-handle = 'postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
+    {%- assign novels-info-detail = '2022.11.20刊行/A5/62ページ, 
+    2021.11.23刊行/文庫判/54ページ, 
+    2020.11.22刊行/四六版/250ページ, 
+    2015.11.23刊行/文庫判/114ページ, 
+    2014.11.24刊行/新書版/76ページ, 
+    2014.11.24刊行（2017.3.26新装版刊行）/新書版/178ページ, 
+    2012.11.18刊行（2016.9.4新装版刊行）/B6/128ページ, 
+    2012.11.18刊行（2014.5.10新装版刊行）/文庫判/134ページ' | split: ', ' -%}
+    <div id="tabBookList">
+      <ul role="tablist" class="book-tab">
+        {%- for book in novels-info-title -%}
+          <li role="presentation" class="book-tab__item">
+            <button
+              role="tab"
+              aria-controls="panel{{ forloop.index }}"
+              aria-selected="{% if forloop.first %}true{% else %}false{% endif %}"
+              tabindex="{% if forloop.first %}0{% else %}-1{% endif %}"
+            >
+              <img src="/assets/img/hyoushi-{{ novels-info-handle[forloop.index0] }}.jpg" alt="{{ book }}表紙イメージ" loading="lazy" width="200">
+            </button>
+          </li> 
+        {%- endfor -%}
+      </ul>
+      <div class="book-tab__contents">
+        {%- for book in novels-info-title -%}
+          <section id="panel{{ forloop.index }}" role="tabpanel" aria-hidden="{% if forloop.first %}false{% else %}true{% endif %}" tabindex="0" class="book-tab__contents-item">
+            <div><h3>{{ book }}</h3><span>{{ novels-info-detail[forloop.index0] }}</span></div>
+            {%- include '_includes/info-{{novels-info-handle[forloop.index0]}}' -%}
+          </section>
+        {%- endfor -%}
+      </div>
+    </div>
   </section>
   <section id="webnovel" class="home__section page-width">
     <h2>web-novel</h2>
