--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@ layout: layout.liquid
 <div class="home">
   <div class="home__firstview">
     <section class="home__firstview-txt">
-      <h1>呼吸書房</h1>
+      <h1><img src="/assets/img/logo.png" alt="呼吸書房" loading="lazy" width="150" class="logo__image"></h1>
       <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
       <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
       <nav class="home__nav">
-        <h2 class="heading heading--default">menu</h2>
         <ul class="home__nav-list">
           <li><a href="/about">about</a></li>
           <li><a href="/event">event</a></li>
@@ -20,13 +19,13 @@ layout: layout.liquid
           <li><a href="#onlinestore">online-store</a></li>
         </ul>
       </nav> 
-      <section class="home__news">
-        <h2 class="heading heading--default">news</h2>
+      <div class="home__news">
+        <h2 class="heading--default">News / </h2>
         <dl class="home__news-body">
           <dt>2023.2.26</dt>
           <dd><a href="">出店予定：文学フリマ広島「い-16」呼吸書房</a></dd>
         </dl>
-      </section>
+      </div>
     </section>
     <div class="home__firstview-bg__wrapper">
       <div class="home__firstview-bg">
@@ -153,4 +152,23 @@ layout: layout.liquid
     BOOTH
     架空ストア
   </section>
+  <section class="home__section page-width">
+    <header class="home__section-title">
+      <h2 class="heading home__section-heading">profile</h2>
+      <p class="home__section-title-txt">自己紹介</p>
+    </header>
+    <h3 class="heading--default">風野 湊（かざの みなと）</h3>
+    <p>1990年4月生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』、ポメラDM20。<br>書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
+    <h4 class="heading--default">ここにもいます</h4>
+    <ul class="list__sns">
+      <li><a href="https://twitter.com/feelingskyblue" target="_blank" rel="nofollow">Twitter</a></li>
+      <li><a href="https://misskey.cloud/@feelingskyblue" target="_blank" rel="nofollow">Misskey(.cloud)</a></li>
+      <li><a href="https://misskey.design/@feelingskyblue" target="_blank" rel="nofollow">Misskey(.design)</a></li>
+      <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="nofollow">skeb</a></li>
+      <li><a href="https://www.youtube.com/channel/UCE-QxzMvKYiWPL6puEiD3Tw" target="_blank" rel="nofollow">YouTube</a></li>
+      <li><a href="https://soundcloud.com/4erb0uzpdh6n" target="_blank" rel="nofollow">SoundCloud</a></li>
+      <li><a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="nofollow">マシュマロ</a></li>
+      <li><a href="https://bookmeter.com/users/25087" target="_blank" rel="nofollow">読書メーター</a></li>
+    </ul>
+  </section> 
 </div>
