--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@ layout: layout.liquid
 <div class="home">
   <div class="home__firstview">
     <section class="home__firstview-txt">
-      <h1><img src="/assets/img/logo.png" alt="呼吸書房" loading="lazy" width="150" class="logo__image"></h1>
-      <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-      <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
-      <nav class="home__nav">
-        <ul class="home__nav-list">
-          <li><a href="/about">about</a></li>
-          <li><a href="/event">event</a></li>
-          <li><a href="/contact">contact</a></li>
-          <li><a href="#booklist">book-list</a></li>
-          <li><a href="#webnovel">web-novel</a></li>
-          <li><a href="#otherwork">other-work</a></li>
-          <li><a href="#onlinestore">online-store</a></li>
-        </ul>
-      </nav> 
-      <div class="home__news">
-        <h2 class="heading--default">News / </h2>
-        <dl class="home__news-body">
-          <dt>2023.2.26</dt>
-          <dd><a href="">出店予定：文学フリマ広島「い-16」呼吸書房</a></dd>
-        </dl>
+      <div class="page-width">
+        <h1><img src="/assets/img/logo.png" alt="呼吸書房" loading="lazy" width="150" class="logo__image"></h1>
+        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
+        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
+        <nav class="home__nav">
+          <ul class="home__nav-list">
+            <li><a href="/about">about</a></li>
+            <li><a href="/event">event</a></li>
+            <li><a href="/contact">contact</a></li>
+            <li><a href="#booklist">book-list</a></li>
+            <li><a href="#webnovel">web-novel</a></li>
+            <li><a href="#otherwork">other-work</a></li>
+            <li><a href="#onlinestore">online-store</a></li>
+          </ul>
+        </nav> 
+        <div class="home__news">
+          <h2 class="heading heading--default">News</h2>
+          <dl class="home__news-body">
+            <dt>2023.2.26</dt>
+            <dd><a href="">出店予定：文学フリマ広島「い-16」呼吸書房</a></dd>
+          </dl>
+        </div>
       </div>
     </section>
     <div class="home__firstview-bg__wrapper">
@@ -42,133 +44,142 @@ layout: layout.liquid
       </div>
     </div>
   </div>
-  <section id="booklist" class="home__section page-width">
-    <header class="home__section-title">
-      <h2 class="heading home__section-heading">book-list</h2>
-      <p class="home__section-title-txt">書籍情報（表紙を選択すると詳細が表示されます）</p>
-    </header>
-    {%- assign novels-info-title = '『walking postcard vol.6』, 
-    『彼らは唯の夢』, 
-    『すべての樹木は光』, 
-    『永遠の不在をめぐる』, 
-    『青と茜と砂漠の国』, 
-    『竜の花嫁』, 
-    『旅人よ立ち止まれ』, 
-    『紙飛行機に眠る月』' | split: ', ' -%}
-    {%- assign novels-info-handle = 'postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
-    {%- assign novels-info-detail = '2022.11.20刊行, 
-    2021.11.23刊行, 
-    2020.11.22刊行, 
-    2015.11.23刊行, 
-    2014.11.24刊行, 
-    2014.11.24刊行（2017.3.26新装版刊行）, 
-    2012.11.18刊行（2016.9.4新装版刊行）, 
-    2012.11.18刊行（2014.5.10新装版刊行）' | split: ', ' -%}
-    <div id="tabBookList">
-      <ul role="tablist" class="book-tab">
-        {%- for book in novels-info-title -%}
-          <li role="presentation" class="book-tab__item">
-            <button
-              role="tab"
-              aria-controls="panel{{ forloop.index }}"
-              aria-selected="{% if forloop.first %}true{% else %}false{% endif %}"
-              tabindex="{% if forloop.first %}0{% else %}-1{% endif %}"
-            >
-              <img src="/assets/img/hyoushi-{{ novels-info-handle[forloop.index0] }}.jpg" alt="{{ book }}表紙イメージ" loading="lazy" width="200">
-            </button>
-          </li> 
-        {%- endfor -%}
-      </ul>
-      <div class="book-tab__contents">
-        {%- for book in novels-info-title -%}
-          <section id="panel{{ forloop.index }}" role="tabpanel" aria-hidden="{% if forloop.first %}false{% else %}true{% endif %}" tabindex="0" class="book-tab__contents-item book-info">
-            <header class="book-info__header">
-              <h3 class="book-info__title">{{ book }}</h3>
-              <span class="book-info__data">{{ novels-info-detail[forloop.index0] }}</span>
-            </header>
-            <div class="book-info__detail">
-              {%- include '_includes/info-{{novels-info-handle[forloop.index0]}}' -%}
-            </div>
-          </section>
-        {%- endfor -%}
+  <div class="home__contents">
+    <section id="booklist" class="home__section page-width">
+      <header class="home__section-title">
+        <h2 class="heading home__section-heading">book-list</h2>
+        <p class="home__section-title-txt">書籍情報</p>
+      </header>
+      <p>これまでに制作した書籍の一覧です。表紙を選択すると詳細が表示されます。</p>
+      {%- assign novels-info-title = '『walking postcard vol.6』, 
+      『彼らは唯の夢』, 
+      『すべての樹木は光』, 
+      『永遠の不在をめぐる』, 
+      『青と茜と砂漠の国』, 
+      『竜の花嫁』, 
+      『旅人よ立ち止まれ』, 
+      『紙飛行機に眠る月』' | split: ', ' -%}
+      {%- assign novels-info-handle = 'postcard-6, dream, tree, eien, aoakane, ryuyome, tabibito, airplane' | split: ', ' -%}
+      {%- assign novels-info-size = 'big, small, normal, small, small, small, big, small' | split: ', ' -%}
+      {%- assign novels-info-detail = '2022.11.20刊行, 
+      2021.11.23刊行, 
+      2020.11.22刊行,
+      2015.11.23刊行,
+      2014.11.24刊行, 
+      2014.11.24刊行（2017.3.26新装版刊行）, 
+      2012.11.18刊行（2016.9.4新装版刊行）, 
+      2012.11.18刊行（2014.5.10新装版刊行）' | split: ', ' -%}
+      <div id="tabBookList">
+        <ul role="tablist" class="book-tab">
+          {%- for book in novels-info-title -%}
+            <li role="presentation" class="book-tab__item">
+              <button
+                role="tab"
+                aria-controls="panel{{ forloop.index }}"
+                aria-selected="{% if forloop.first %}true{% else %}false{% endif %}"
+                tabindex="{% if forloop.first %}0{% else %}-1{% endif %}"
+              >
+                <img src="/assets/img/hyoushi-{{ novels-info-handle[forloop.index0] }}.jpg" alt="{{ book }}表紙イメージ" loading="lazy" width="400" class="book-image--{{ novels-info-size[forloop.index0] }}">
+              </button>
+            </li> 
+          {%- endfor -%}
+        </ul>
+        <div class="book-tab__contents">
+          {%- for book in novels-info-title -%}
+            <section id="panel{{ forloop.index }}" role="tabpanel" aria-hidden="{% if forloop.first %}false{% else %}true{% endif %}" tabindex="0" class="book-tab__contents-item book-info">
+              <header class="book-info__header">
+                <h3 class="book-info__title">{{ book }}</h3>
+                <span class="book-info__data">{{ novels-info-detail[forloop.index0] }}</span>
+              </header>
+              <div class="book-info__detail">
+                {%- include '_includes/info-{{novels-info-handle[forloop.index0]}}' -%}
+              </div>
+            </section>
+          {%- endfor -%} 
+        </div> 
       </div>
-    </div>
-  </section>
-  {% comment %}
-  <section class="random-novel bg__primary">
-    <div class="random-novel__inner font-serif">
-      <p>
-        　夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。<br>
-        　夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。（ランダムピックアップ）<a href="">続きを読む</a>
-      </p>
-    </div>
-  </section>
-  {% endcomment %}
-  <section id="webnovel" class="home__section page-width">
-    <header class="home__section-title">
-      <h2 class="heading home__section-heading">web-novel</h2>
-      <p class="home__section-title-txt">小説を読む</p>
-    </header>
-    {%- for novel in collections.novel -%}
-      {%- if novel.data.tags contains 'book-paperplane' -%}
-        {% assign novels-paperplane = novels-paperplane | concat: novel %}
-      {%- elsif novel.data.tags contains 'book-eien' -%}
-        {% assign novels-eien = novels-eien | concat: novel %}
-      {%- elsif novel.data.tags contains 'improvise' -%}
-        {% assign novels-improvise = novels-improvise | concat: novel %}
-      {%- endif -%}
-    {%- endfor -%}
-    <section>
-      <h3>紙飛行機に眠る月</h3>
-      {% for novel in novels-paperplane %}
-        <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
-      {% endfor %}
+    </section> 
+    <section class="random-novel bg__secondary">
+      <div class="random-novel__inner font-serif">
+        <p>
+          　夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。<br>
+          　夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。（ランダムピックアップ）<a href="">続きを読む</a>
+        </p>
+      </div>
     </section>
-    <section>
-      <h3>永遠の不在をめぐる</h3>
-      {% for novel in novels-eien %}
-        <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
-      {% endfor %}
+    <section id="webnovel" class="home__section page-width">
+      <header class="home__section-title">
+        <h2 class="heading home__section-heading">web-novel</h2>
+        <p class="home__section-title-txt">小説を読む</p>
+      </header>
+      {%- for novel in collections.novel -%}
+        {%- if novel.data.tags contains 'book-paperplane' -%}
+          {% assign novels-paperplane = novels-paperplane | concat: novel %}
+        {%- elsif novel.data.tags contains 'book-eien' -%}
+          {% assign novels-eien = novels-eien | concat: novel %}
+        {%- elsif novel.data.tags contains 'improvise' -%}
+          {% assign novels-improvise = novels-improvise | concat: novel %}
+        {%- endif -%}
+      {%- endfor -%}
+      <section>
+        <h3>紙飛行機に眠る月</h3>
+        {% for novel in novels-paperplane %}
+          <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
+        {% endfor %}
+      </section>
+      <section>
+        <h3>永遠の不在をめぐる</h3>
+        {% for novel in novels-eien %}
+          <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
+        {% endfor %}
+      </section>
+      <section>
+        <h3>即興小説</h3>
+        {% for novel in novels-improvise %}
+          <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
+        {% endfor %}
+      </section> 
     </section>
-    <section>
-      <h3>即興小説</h3>
-      {% for novel in novels-improvise %}
-        <h4><a href="{{ novel.url }}">{{ novel.data.title }}</a></h4>
-      {% endfor %}
+    <section id="otherwork" class="home__section page-width">
+      <header class="home__section-title">
+        <h2 class="heading home__section-heading">other-work</h2>
+        <p class="home__section-title-txt">紀行文・写真・朗読に触れる</p>
+      </header>
     </section>
-  </section>
-  <section id="otherwork" class="home__section page-width">
-    <header class="home__section-title">
-      <h2 class="heading home__section-heading">other-work</h2>
-      <p class="home__section-title-txt">紀行文・写真・朗読に触れる</p>
-    </header>
-  </section>
-  <section id="onlinestore" class="home__section page-width">
-    <header class="home__section-title">
-      <h2 class="heading home__section-heading">online-store</h2>
-      <p class="home__section-title-txt">書籍通販</p>
-    </header>
-    <p>以下ストアで書籍通販を承っております。</p>
-    BOOTH
-    架空ストア
-  </section>
-  <section class="home__section page-width">
-    <header class="home__section-title">
-      <h2 class="heading home__section-heading">profile</h2>
-      <p class="home__section-title-txt">自己紹介</p>
-    </header>
-    <h3 class="heading--default">風野 湊（かざの みなと）</h3>
-    <p>1990年4月生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』、ポメラDM20。<br>書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
-    <h4 class="heading--default">ここにもいます</h4>
-    <ul class="list__sns">
-      <li><a href="https://twitter.com/feelingskyblue" target="_blank" rel="nofollow">Twitter</a></li>
-      <li><a href="https://misskey.cloud/@feelingskyblue" target="_blank" rel="nofollow">Misskey(.cloud)</a></li>
-      <li><a href="https://misskey.design/@feelingskyblue" target="_blank" rel="nofollow">Misskey(.design)</a></li>
-      <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="nofollow">skeb</a></li>
-      <li><a href="https://www.youtube.com/channel/UCE-QxzMvKYiWPL6puEiD3Tw" target="_blank" rel="nofollow">YouTube</a></li>
-      <li><a href="https://soundcloud.com/4erb0uzpdh6n" target="_blank" rel="nofollow">SoundCloud</a></li>
-      <li><a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="nofollow">マシュマロ</a></li>
-      <li><a href="https://bookmeter.com/users/25087" target="_blank" rel="nofollow">読書メーター</a></li>
-    </ul>
-  </section> 
+    <section id="onlinestore" class="home__section page-width">
+      <header class="home__section-title">
+        <h2 class="heading home__section-heading">online-store</h2>
+        <p class="home__section-title-txt">書籍販売</p>
+      </header>
+      <p>年数回の<a href="https://bunfree.net/" target="_blank" rel="noopenner noreferrer">文学フリマ</a>（主に東京）を中心とした各地の同人誌即売会への出店の他、委託販売、通販を行っています。<br>通販でのご購入には「BOOTH」または「架空ストア」をご利用くださいませ。<br>※それぞれ送料と（手数料の差異により）販売価格が異なります。</p>
+      <dl class="home__section__innner-sub list__dl">
+        <dt class="heading--secondary heading--color">BOOTH</dt>
+        <dd>在庫のある既刊はすべてBOOTHからご購入可能です。<br>ご注文後、あんしんBOOTHパック（匿名配送）で自宅から発送いたします。ご利用にはpixivIDが必要です。</dd>
+        <dd><a href="https://kokyushobo.booth.pm/" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">BOOTH（外部サイトへ）</a></dd>
+        <dt class="heading--secondary heading--color font-serif">架空ストア</dt>
+        <dd>一部書籍のみとなりますが、各数冊ずつ委託しております。<br>架空ストアで購入希望の書籍があれば追加委託を検討しますので、<a href="/contact">Contact</a>ページよりご一報ください。</dd>
+        <dd><a href="https://store.retro-biz.com/list_o510.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">架空ストア（外部サイトへ）</a></dd>
+      </dl>
+    </section>
+    <section class="home__section page-width">
+      <header class="home__section-title">
+        <h2 class="heading home__section-heading">profile</h2>
+        <p class="home__section-title-txt">自己紹介</p>
+      </header>
+      <p>ペンネーム：風野 湊（かざの みなと）。1990年4月生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』。<br>執筆のお供はポメラDM20からMacBook Airに変わりました。書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
+      <h4 class="heading--default">I'm here.</h4>
+      <ul class="list__sns">
+        <li><a href="https://twitter.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">Twitter</a></li>
+        <li><a href="https://misskey.cloud/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.cloud)</a></li>
+        <li><a href="https://misskey.design/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.design)</a></li>
+        <li><a href="https://novelskey.tarbin.net/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.novelskey)</a></li>
+        <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="noopenner noreferrer">skeb</a></li>
+        <li><a href="https://feelingskyblue.fanbox.cc/" target="_blank" rel="noopenner noreferrer">pixiv FANBOX</a></li>
+        <li><a href="https://www.youtube.com/channel/UCE-QxzMvKYiWPL6puEiD3Tw" target="_blank" rel="noopenner noreferrer">YouTube</a></li>
+        <li><a href="https://soundcloud.com/4erb0uzpdh6n" target="_blank" rel="noopenner noreferrer">SoundCloud</a></li>
+        <li><a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a></li>
+        <li><a href="https://bookmeter.com/users/25087" target="_blank" rel="noopenner noreferrer">読書メーター</a></li>
+      </ul>
+    </section> 
+  </div>
 </div>
