--- a/event/index.html
+++ b/event/index.html
@@ -1,7 +1,49 @@
 ---
-layout: layout.liquid
+layout: layout-page.liquid
+title: event
+subtitle: イベント出店情報
 ---
 
-<section>
-  eventページだよぉ
-</section>
+<div id="event">
+  <p>出店予定のイベントと、過去に出店したイベントのログをまとめています。</p>
+  <section class="home__section__innner-sub">
+    <h2 class="heading--secondary heading--color">Schedule</h2>
+    <ul class="list__style--dot">
+      <li>2023.05.21(日) <a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a></li>
+      <li>2023.09.10(日) <a href="https://bunfree.net/event/osaka11/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪11</a>※検討中</li>
+    </ul>
+  </section>
+  <section class="home__section__innner-sub">
+    <h2 class="heading--secondary heading--color">Log</h2>
+    <ul class="list__style--dot op_7">
+      <li>2023.02 文学フリマ広島5 <a href="https://c.bunfree.net/c/hiroshima05/28353" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
+      <li>2022.11 文学フリマ東京35 <a href="https://c.bunfree.net/c/tokyo35/26479" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
+      <li>2022.09 第十回文学フリマ大阪</li>
+      <li>2022.06 第七回文学フリマ岩手</li>
+      <li>2022.05 第三十四回文学フリマ東京</li>
+      <li>2021.11 第三十三回文学フリマ東京</li>
+      <li>2021.10 第六回文学フリマ札幌</li>
+      <li>2021.05 第三十二回文学フリマ東京</li>
+      <li>2020.11 第三十一回文学フリマ東京</li>
+      <li>2019.11 第二十九回文学フリマ東京</li>
+      <li>2019.05 第二十八回文学フリマ東京</li>
+      <li>2018.11 第二十七回文学フリマ東京</li>
+      <li>2018.05 第二十六回文学フリマ東京</li>
+      <li>2017.11 第二十五回文学フリマ東京</li>
+      <li>2017.05 第二十四回文学フリマ東京</li>
+      <li>2017.03 第一回文学フリマ前橋</li>
+      <li>2016.11 第二十三回文学フリマ東京</li>
+      <li>2016.09 第一回文学フリマ岩手</li>
+      <li>2016.05 第二十二回文学フリマ東京</li>
+      <li>2015.11 第二十一回文学フリマ東京</li>
+      <li>2015.08 コミティア113</li>
+      <li>2015.04 第一回文学フリマ金沢</li>
+      <li>2014.11 第十九回文学フリマ</li>
+      <li>2014.05 第十八回文学フリマ</li>
+      <li>2013.11 第十七回文学フリマ</li>
+      <li>2013.08 コミックマーケット84</li>
+      <li>2013.06 銀座モダンアート【Zine展2】</li>
+      <li>2012.11 第十五回文学フリマ</li>
+    </ul>
+  </section>
+</div>
