--- a/store/index.html
+++ b/store/index.html
@@ -1,12 +1,10 @@
 ---
-layout: layout.liquid
+layout: layout-page.liquid
+title: online-store
+subtitle: 書籍販売
 ---
 
-<section id="onlinestore" class="home__section page-width">
-  <header class="home__section-title">
-    <h2 class="heading home__section-heading">online-store</h2>
-    <p class="home__section-title-txt">書籍販売</p>
-  </header>
+<div id="onlinestore">
   <p>年数回の<a href="https://bunfree.net/" target="_blank" rel="noopenner noreferrer">文学フリマ</a>（主に東京）を中心とした各地の同人誌即売会への出店の他、委託販売、通販を行っています。<br>通販でのご購入には「BOOTH」または「架空ストア」をご利用くださいませ。<br>※それぞれ送料と（手数料の差異により）販売価格が異なります。</p>
   <dl class="home__section__innner-sub list__dl">
     <dt class="heading--secondary heading--color">BOOTH</dt>
@@ -16,4 +14,4 @@ layout: layout.liquid
     <dd>一部書籍のみとなりますが、各数冊ずつ委託しております。<br>架空ストアで購入希望の書籍があれば追加委託を検討しますので、<a href="/contact">Contact</a>ページよりご一報ください。</dd>
     <dd><a href="https://store.retro-biz.com/list_o510.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">架空ストア（外部サイトへ）</a></dd>
   </dl>
-</section>
+</div>
