--- a/store/index.html
+++ b/store/index.html
@@ -11,7 +11,7 @@ subtitle: 書籍販売
     <dd>在庫のある既刊はすべてBOOTHからご購入可能です。<br>ご注文後、あんしんBOOTHパック（匿名配送）で自宅から発送いたします。ご利用にはpixivIDが必要です。</dd>
     <dd><a href="https://kokyushobo.booth.pm/" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">BOOTH（外部サイトへ）</a></dd>
     <dt class="heading--secondary heading--color font-serif">架空ストア</dt>
-    <dd>一部書籍のみとなりますが、各数冊ずつ委託しております。<br>架空ストアで購入希望の書籍があれば追加委託を検討しますので、<a href="/contact">Contact</a>ページよりご一報ください。</dd>
+    <dd>一部書籍のみとなりますが、各数冊ずつ委託しております。<br>架空ストアで購入希望の書籍があれば追加委託を検討しますので、<a href="/contact">Contact</a>ページや<a href="https://twitter.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">Twitter</a>宛にご一報ください。</dd>
     <dd><a href="https://store.retro-biz.com/list_o510.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">架空ストア（外部サイトへ）</a></dd>
   </dl>
 </div>
