--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,35 @@
 ---
-layout: layout.liquid
+layout: layout-page.liquid
+title: contact
+subtitle: お問合せ
 ---
 
-<section>
-  contactページだよぉ
-</section>
+<div id="contact">
+  <p>お問合せ、ご感想、ご依頼などのメッセージはこちらからどうぞ。<br>匿名でのメッセージ送付には<a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a>をご利用くださいませ。</p>
+  <form name="contact" class="form" method="POST" netlify>
+    <label class="form__label">
+      <span class="form__label-txt">お名前</span>
+      <input type="text" name="name" required/>
+    </label>
+    <label class="form__label">
+      <span class="form__label-txt">メールアドレス</span>
+      <input type="email" name="email" required />
+    </label>
+    <label class="form__label">
+      <span class="form__label-txt">本文</span>
+      <textarea name="message" required></textarea>
+    </label>
+    <button class="btn btn--medium btn--color" type="submit">メッセージを送る</button>
+    <p>送信ボタンを押すと、BOT防止のreCAPTHA画面（英語）に遷移します。</p>
+  </form>
+  <hr>
+  <section class="home__section__innner-sub">
+    <h2 class="page__section-title heading--secondary heading--color">FAQ</h2>
+    <dl class="list__dl list__faq">
+      <dt>有償依頼は受け付けていますか？</dt>
+      <dd>短編小説および散文の執筆依頼を承ります。ご依頼を元に寄稿した作品の一覧はこちらをご参照ください。<br>また、より気軽な有償リクエスト受付サービスとして<a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Skeb</a>も利用いただけます。<br>※Skebのリクエストは内容・コミッション額によってお請けできない場合もございます。予めご了承ください。</dd>
+      <dt>呼吸書房の書籍を店舗等で販売することは可能ですか？</dt>
+      <dd>はい、可能です。買切・委託のどちらでもお送りできますので、お気軽にご相談ください。</dd>
+    </dl>
+  </section>
+</div>
