樹木まわりの小説調整

--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@ layout: layout.liquid
         </p>
       </div>
     </section>
-    <section id="webnovel" class="home__section page-width">
-      <header class="home__section-title">
-        <h2 class="heading home__section-heading">web-novel</h2>
-        <p class="home__section-title-txt">小説を読む</p>
-      </header>
-      {%- include '_includes/section-novels' -%}
+    <section id="webnovel" class="home__section">
+      <div class="page-width">
+        <header class="home__section-title">
+          <h2 class="heading home__section-heading">web-novel</h2>
+          <p class="home__section-title-txt">小説を読む</p>
+        </header>
+        {%- include '_includes/section-novels' -%}  
+      </div>
     </section>
     <section class="home__section page-width">
       <header class="home__section-title">
