--- a/book/eien.html
+++ b/book/eien.html
@@ -2,6 +2,7 @@
 layout: layout-book.liquid
 title: 永遠の不在をめぐる
 subtitle: 書籍情報
+description: 「不在」をテーマにした、ふたつめの幻想短編集です。何かを失い、あるいは投げ捨て、もしくは奪われたひとびとの、永遠に埋まらない空席を眺めつづけるような短編と掌編を７編収録。各編の舞台は、遠い未来、現代東京、天国と地獄、そして暗闇をめぐります。登場人物たちに関連性はありません。そもそも登場人物さえ不在かもしれません。
 ---
 
 <div class="flex book-info__page-wrapper">
