--- a/book/index.html
+++ b/book/index.html
@@ -2,6 +2,7 @@
 layout: layout-page.liquid
 title: book-list
 subtitle: 書籍情報
+description: 呼吸書房の書籍一覧ページです。これまでに制作した書籍の詳細情報をまとめています。
 ---
 
 <div id="booklist">
