--- a/event/index.html
+++ b/event/index.html
@@ -2,6 +2,7 @@
 layout: layout-page.liquid
 title: event
 subtitle: イベント出店情報
+description: 呼吸書房のイベント情報ページです。出店予定のイベントと、過去に出店したイベントのログをまとめています。
 ---
 
 <div id="event">
