--- a/other/index.html
+++ b/other/index.html
@@ -1,12 +1,11 @@
 ---
-layout: layout.liquid
+layout: layout-page.liquid
+title: other-work
+subtitle: 紀行文・写真・朗読に触れる
+description: 紀行文、詩、もしくは旅のお話。訪れた国にまつわる言葉と写真を掲載しています。音楽と映像も少しだけ。
 ---
 
-<section id="otherwork" class="home__section page-width">
-  <header class="home__section-title">
-    <h2 class="heading home__section-heading">other-work</h2>
-    <p class="home__section-title-txt">紀行文・写真・朗読に触れる</p>
-  </header>
+<section id="otherwork">
   <dl class="home__section__innner-sub list__dl">
     <dt class="heading--secondary heading--color">Journey</dt>
     <dd>紀行文、詩、もしくは旅のお話。訪れた国にまつわる言葉と写真を掲載しています。音楽と映像も少しだけ。</dd>
