--- a/store/index.html
+++ b/store/index.html
@@ -2,6 +2,7 @@
 layout: layout-page.liquid
 title: online-store
 subtitle: 書籍販売
+description: 年数回の文学フリマ（主に東京）を中心とした各地の同人誌即売会への出店の他、委託販売、通販を行っています。通販でのご購入には「BOOTH」または「架空ストア」をご利用くださいませ。
 ---
 
 <div id="onlinestore">
