--- a/book/paperplane.html
+++ b/book/paperplane.html
@@ -2,6 +2,7 @@
 layout: layout-book.liquid
 title: 紙飛行機に眠る月
 subtitle: 書籍情報
+description: サイト上で公開してきた作品四編に加え、新たに書き下ろした短編・掌編を五編収録した幻想短編集です。作品ジャンルはSF、寓話童話、ファンタジー、現代ものと様々ですが、「幻想」を一本の軸に、様々な視点から切り取った物語をお届けできればと思います。
 ---
 
 <div class="flex book-info__page-wrapper">
