--- a/book/trees_light.html
+++ b/book/trees_light.html
@@ -2,6 +2,7 @@
 layout: layout-book.liquid
 title: すべての樹木は光
 subtitle: 書籍情報
+description: 架空の熱帯雨林を舞台とした樹木変身譚です。樹木に変わる/変えられる人々を描く幻想（ファンタジー）小説でもあります。遠い異国の生活描写に没入したい方、迫り来る幻想に慄きたい方、答えのない問いかけに惹かれる方へ。
 ---
 
 <div class="flex book-info__page-wrapper">
