--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,7 @@ layout: layout-page.liquid
 title: contact
 subtitle: お問合せ
 description: お問合せ、ご感想、ご依頼などのメッセージはこちらからどうぞ。
+boxshadow: true
 ---
 
 <div id="contact">
