--- a/event/index.html
+++ b/event/index.html
@@ -3,19 +3,20 @@ layout: layout-page.liquid
 title: event
 subtitle: イベント出店情報
 description: 呼吸書房のイベント情報ページです。出店予定のイベントと、過去に出店したイベントのログをまとめています。
+boxshadow: true
 ---
 
 <div id="event">
   <p>出店予定のイベントと、過去に出店したイベントのログをまとめています。</p>
   <section class="home__section__innner-sub">
-    <h2 class="heading--secondary heading--color">Schedule</h2>
+    <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
       <li>2023.05.21(日) <a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a></li>
       <li>2023.09.10(日) <a href="https://bunfree.net/event/osaka11/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪11</a>※検討中</li>
     </ul>
   </section>
   <section class="home__section__innner-sub scroll__wrapper">
-    <h2 class="heading--secondary heading--color">Log</h2>
+    <h2 class="heading--primary heading--color">log</h2>
     <ul class="list__style--dot op_7 event-log__wrapper">
       <li>2023.02 文学フリマ広島5 <a href="https://c.bunfree.net/c/hiroshima05/28353" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
       <li>2022.11 文学フリマ東京35 <a href="https://c.bunfree.net/c/tokyo35/26479" target="_blank" rel="noopenner noreferrer">webカタログ</a></li>
