--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: layout.liquid
     <section class="home__firstview-txt">
       <div class="page-width">
         <h1><img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy"></h1>
-        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による制作物を公開しています。<br>小説・詩・紀行文のほか、旅先の写真や音楽、そして朗読音声もほんのすこし。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出展イベントや委託販売先でもお買い求めいただけます。</p>
+        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
+        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもお買い求めいただけます。</p>
         <nav class="home__nav">
           <ul class="home__nav-list">
             <li><a href="/about">about</a></li>
@@ -19,14 +19,15 @@ layout: layout.liquid
             <li><a href="/other">other-work</a></li>
             <li><a href="/store">online-store</a></li>
           </ul>
-        </nav> 
+        </nav>
+
         <div class="home__news">
-          <h2 class="heading heading--default">News</h2>
           <dl class="home__news-body">
             <dt>2023.5.21</dt>
-            <dd>出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜呼吸書房</dd>
+            <dd>出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></dd>
           </dl>
         </div>
+
       </div>
     </section>
     <div class="home__firstview-bg__wrapper">
@@ -50,7 +51,7 @@ layout: layout.liquid
         <h2 class="heading home__section-heading">book-list</h2>
         <p class="home__section-title-txt">書籍情報</p>
       </header>
-      <p>これまでに制作した書籍の一覧です。表紙を選択すると詳細が表示されます。</p>
+      <p>これまでに執筆・制作した書籍の一覧です。表紙を選択すると詳細が表示されます。</p>
       {%- include '_includes/section-books' -%}
     </section>
     <section id="randomNovel" class="random-novel bg__secondary">
@@ -70,20 +71,9 @@ layout: layout.liquid
         <h2 class="heading home__section-heading">profile</h2>
         <p class="home__section-title-txt">自己紹介</p>
       </header>
-      <p>ペンネーム：風野 湊（かざの みなと）。1990年4月生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』。<br>執筆のお供はポメラDM20からMacBook Airに変わりました。書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
+      <p>ペンネーム：風野 湊（かざの みなと）。1990年4月29日生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』。<br>執筆のお供はポメラDM20からMacBook Airに変わりました。書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
       <h4 class="heading--default">I'm here.</h4>
-      <ul class="list__sns">
-        <li><a href="https://twitter.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">Twitter</a></li>
-        <li><a href="https://misskey.cloud/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.cloud)</a></li>
-        <li><a href="https://misskey.design/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.design)</a></li>
-        <li><a href="https://novelskey.tarbin.net/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.novelskey)</a></li>
-        <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Skeb</a></li>
-        <li><a href="https://feelingskyblue.fanbox.cc/" target="_blank" rel="noopenner noreferrer">pixiv FANBOX</a></li>
-        <li><a href="https://www.youtube.com/channel/UCE-QxzMvKYiWPL6puEiD3Tw" target="_blank" rel="noopenner noreferrer">YouTube</a></li>
-        <li><a href="https://soundcloud.com/4erb0uzpdh6n" target="_blank" rel="noopenner noreferrer">SoundCloud</a></li>
-        <li><a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a></li>
-        <li><a href="https://bookmeter.com/users/25087" target="_blank" rel="noopenner noreferrer">読書メーター</a></li>
-      </ul>
+      {%- include '_includes/snipet-sns-list' -%}
     </section> 
   </div>
 </div>
