--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,8 @@ boxshadow: true
   <div class="text__wrapper">
     <section>
       <h2 class="heading--primary heading--color">attention</h2>
-      <p>当サイト kokyusyobo.com および、当サイトに掲載されているコンテンツ（小説・文章・写真・その他すべて）の著作権は、私、風野湊に帰属いたします。<br>当サイト上コンテンツの一部または全てを、引用の範囲を越えて無断で転載することはお止めください。<br>また、画像URLの直リンクもご遠慮ください。<br>
-        （※書籍の表紙装画など、私以外の方が制作された作品については、その方に著作権があります。TOPページおよび書籍情報ページにお名前とリンクをクレジットしているので、ぜひご覧ください）</p>
+      <p>当サイト kokyusyobo.com および、当サイトに掲載されているコンテンツ（小説・文章・写真・その他すべて）の著作権は、私、風野湊に帰属いたします。<br>当サイト上コンテンツの一部または全てを、引用の範囲を越えて無断で転載することはお止めください。また、画像URLの直リンクもご遠慮ください。<br>
+      ※書籍の表紙装画など、私以外の方が制作された作品については、その方に著作権があります。TOPページおよび書籍情報ページにお名前とリンクをクレジットしているので、ぜひご覧ください</p>
     </section>
   </div>
   <hr>
