Aboutページ作成

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: layout.liquid
         <h2 class="heading home__section-heading">profile</h2>
         <p class="home__section-title-txt">自己紹介</p>
       </header>
-      <p>ペンネーム：風野 湊（かざの みなと）。1990年4月29日生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』。<br>執筆のお供はポメラDM20からMacBook Airに変わりました。書きつづけています。<br><a href="/about"> →もっと詳しく（aboutページへ）</a></p> 
+      <p>ペンネーム：風野 湊（かざの みなと）。1990年4月29日生。旅先で猫を愛でつつ読書に耽れたら幸福。<br>バックパックにかならず詰めるのは、宮沢賢治詩集、長田弘紀行文、P.ロスファス『風の名前』。<br>執筆のお供はポメラDM20からMacBook Airに変わりました。書きつづけています。<br><a href="/about#profile"> →もっと詳しく（aboutページへ）</a></p> 
       <h4 class="heading--default">I'm here.</h4>
       {%- include '_includes/snipet-sns-list' -%}
     </section> 
