--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: layout.liquid
         <div class="home__firstview-image__txt font-serif">
           <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
           <div class="align-right">
-            <a href="/novel/trees-light/">『すべての樹木は光』<span>詳細ページへ</span></a>
+            <a href="/book/trees_light/">『すべての樹木は光』<span>詳細ページへ</span></a>
           </div>
         </div>
       </div>
