--- a/index.html
+++ b/index.html
@@ -27,22 +27,10 @@ layout: layout.liquid
             <dd>出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></dd>
           </dl>
         </div>
-
       </div>
     </section>
-    <div class="home__firstview-bg__wrapper">
-      <div class="home__firstview-bg">
-        <figure class="home__firstview-image">
-          <img src="/assets/img/mv_treeislight.jpg" alt="" width="2000">
-          <figcaption>書籍表紙装画：佐野裕一さん</figcaption>
-        </figure>
-        <div class="home__firstview-image__txt font-serif">
-          <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
-          <div class="align-right">
-            <a href="/book/trees_light/">『すべての樹木は光』<span>詳細ページへ</span></a>
-          </div>
-        </div>
-      </div>
+    <div class="home__firstview-bg__wrapper" id="homeFirstView">
+      {%- include '_includes/snippet-firstview-item' -%}
     </div>
   </div>
   <div class="home__contents">
