SPレイアウト調整

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: layout.liquid
     <section class="home__firstview-txt">
       <div class="page-width">
         <h1><img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy"></h1>
-        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br>路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br>一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもお買い求めいただけます。</p>
+        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
+        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもお買い求め頂けます。</p>
         <nav class="home__nav">
           <ul class="home__nav-list">
             <li><a href="/about">about</a></li>
@@ -22,10 +22,9 @@ layout: layout.liquid
         </nav>
 
         <div class="home__news">
-          <dl class="home__news-body">
-            <dt>2023.5.21</dt>
-            <dd>出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></dd>
-          </dl>
+          <div class="home__news-body">
+            <p>2023.5.21出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></p>
+          </div>
         </div>
       </div>
     </section>
