--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ boxshadow: true
 
   <section class="page-txt__wrapper">
     <h2 class="heading--primary heading--color">attention</h2>
-    <p>当サイト kokyusyobo.com および、当サイトに掲載されているコンテンツ（小説・文章・写真・その他すべて）の著作権は、私、風野湊に帰属いたします。当サイト上コンテンツの一部または全てを、引用の範囲を越えて無断で転載することはお止めください。<br>
+    <p>当サイト kokyushobo.com および、当サイトに掲載されているコンテンツ（小説・文章・写真・その他すべて）の著作権は、私、風野湊に帰属いたします。当サイト上コンテンツの一部または全てを、引用の範囲を越えて無断で転載することはお止めください。<br>
     ※書籍の表紙装画など、私以外の方が制作された作品については、その方に著作権があります。TOPページおよび書籍情報ページにお名前とリンクをクレジットしています。ぜひご覧ください。</p>
     <p>当サイトはリンクフリーです。<br>ただし、画像URLの直リンクはサーバーに負荷が掛かるためご遠慮ください。</p>
     <p>当サイトの<a href="/about/privacy">プライバシーポリシー</a>はこちらからご確認いただけます。</p>
