--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: layout.liquid
         <h2 class="heading home__section-heading">book-list</h2>
         <p class="home__section-title-txt">書籍情報</p>
       </header>
-      <p>これまでに執筆・制作した書籍の一覧です。表紙を選択すると詳細が表示されます。</p>
+      <p>これまでに執筆・制作した書籍の一覧です。<br>横スクロールで次の書籍を表示できます。表紙を選択すると書籍の詳細情報が表示されます。</p>
       {%- include '_includes/section-books' -%}
     </section>
     <section id="webnovel" class="home__section">
