文字サイズ調整

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: layout.liquid
       <div class="page-width">
         <h1 class="logo__wrapper"><img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy"></h1>
         <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-        <p>書斎と書店、ふたつの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもお買い求め頂けます。</p>
+        <p>書斎と書店、二つの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもご購入頂けます。</p>
         <nav class="home__nav">
           <ul class="home__nav-list">
             <li><a href="/about">about</a></li>
