文言調整など

--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,9 @@ boxshadow: true
         ・『すべての樹木は光』の特設ページ<br>
         ・に合わせて、『すべての樹木は光』試し読みの量を増やす<br>
         ・ブログに類するものの作成<br>
-        ・ダークモード切り替え対応
+        ・ダークモード切り替え対応<br>
+        ・紀行文コンテンツをTumblrからサイトに移管
+        ・朗読コンテンツの埋め込み連携
       </p>
     </section>
   </section>
