--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@ layout: layout.liquid
           <h2 class="heading home__section-heading">web-novel</h2>
           <p class="home__section-title-txt">小説を読む</p>
         </header>
-        {%- include '_includes/section-novels' -%}  
+        {%- include '_includes/section-novels' -%}
+        <div class="align-center btn__wrapper">
+          <a href="/novel/" class="btn btn--medium btn--color">すべての小説一覧を見る</a>
+        </div>
       </div>
     </section>
     <section id="randomNovel" class="random-novel bg__secondary">
