更新日エリアの追加

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@ layout: layout.liquid
   <div class="home__firstview">
     <section class="home__firstview-txt">
       <div class="page-width">
-        <h1 class="logo__wrapper"><img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy"></h1>
+        <header class="home__header">
+          <h1 class="logo__wrapper">
+            <img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy">
+          </h1>
+          <div class="home__announce">
+            <p>last update 2023.4.29 サイトリニューアル</p>
+          </div>  
+        </header>
         <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
         <p>書斎と書店、二つの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもご購入頂けます。</p>
         <nav class="home__nav">
@@ -22,7 +29,7 @@ layout: layout.liquid
         </nav>
         <div class="home__news">
           <div class="home__news-body">
-            <p>2023.5.21出店予定：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></p>
+            <p>2023.5.21：<a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a>出店予定｜<a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">東京流通センター 第一展示場 J-14 呼吸書房（Webカタログはこちら）</a></p>
           </div>
         </div>
       </div>
