--- a/event/index.html
+++ b/event/index.html
@@ -11,7 +11,7 @@ boxshadow: true
   <section class="home__section__innner-sub">
     <h2 class="heading--primary heading--color">schedule</h2>
     <ul class="list__style--dot">
-      <li>2023.05.21(日) <a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a></li>
+      <li>2023.05.21(日) <a href="https://bunfree.net/event/tokyo36/" target="_blank" rel="noopenner noreferrer">文学フリマ東京36</a> / <a href="https://c.bunfree.net/c/tokyo36/h1/J/14" target="_blank" rel="noopenner noreferrer">J-14 呼吸書房（Webカタログはこちら）</a></li>
       <li>2023.09.10(日) <a href="https://bunfree.net/event/osaka11/" target="_blank" rel="noopenner noreferrer">文学フリマ大阪11</a>※検討中</li>
     </ul>
   </section>
