--- a/about/index.html
+++ b/about/index.html
@@ -57,8 +57,9 @@ boxshadow: true
       <p>2023.4.29 <br>長らく先延ばしにしていた個人サイトのリニューアルに本格着手したのは…2023年2月ごろでしょうか。Twitterの先行きがだいぶ怪しくなったことでようやく腰を上げられました。個人サイトという拠点を改めて作り直すにあたって、旧サイトのソースコードぐちゃぐちゃ加減に頭を抱え、古い作品に悶絶し、いやはや大変でした……笑。だいたいデザイン作業に一ヶ月くらい掛かった気がします。そのデザインも実際に実装したのは半分くらいなのでは。<br>実装着手が3月下旬、およそ一ヶ月での突貫リニューアル作業です。これから徐々に機能を増やしてゆけたら良いなあ……。主に以下の機能を追加予定なので、のんびりお待ちくださいね。</p>
       <p>
         ・小説作品の追加（彼らは唯の夢＆novelmber）<br>
-        ・小説ページ（長編）のフォント切り替え機能（ができるサイドバーの実装）<br>
-        ・追従ヘッダー（付けるかも、付けないかも）<br>
+        ・小説ページのフォント切り替え機能（ができるサイドバーの実装）<br>
+        ・小説ページ（長編）の作成、目次サイドバーもつける<br>
+        ・追従ヘッダー（つけるかも、つけないかも）<br>
         ・『すべての樹木は光』の特設ページ<br>
         ・に合わせて、『すべての樹木は光』試し読みの量を増やす<br>
         ・ブログに類するものの作成<br>
