--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: layout-page.liquid
 title: about
 subtitle: このサイトについて
-description: 呼吸書房のイベント情報ページです。出店予定のイベントと、過去に出店したイベントのログをまとめています。
+description: 呼吸書房の概要ページです。サイト閲覧にあたってお願いしたいことの他、著者プロフィール等も掲載しています。
 boxshadow: true
 ---
 
