--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@ boxshadow: true
 ---
 
 <div id="contact">
-  <p>お問合せ、ご感想、ご依頼などのメッセージはこちらからどうぞ。<br>匿名でのメッセージ送付には<a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a>をご利用くださいませ。</p>
+  <p>お問合せ、ご感想、ご依頼などはこちらからどうぞ。各項目はすべて入力必須です。<br>匿名でのメッセージ送付には<a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a>をご利用くださいませ。</p>
   <form name="contact" class="form" method="POST" netlify>
     <label class="form__label">
       <span class="form__label-txt">お名前</span>
