--- a/book/dream.html
+++ b/book/dream.html
@@ -2,7 +2,7 @@
 layout: layout-book.liquid
 title: 彼らは唯の夢
 subtitle: 書籍情報
-description: 「不在」をテーマにした、ふたつめの幻想短編集です。何かを失い、あるいは投げ捨て、もしくは奪われたひとびとの、永遠に埋まらない空席を眺めつづけるような短編と掌編を７編収録。各編の舞台は、遠い未来、現代東京、天国と地獄、そして暗闇をめぐります。登場人物たちに関連性はありません。そもそも登場人物さえ不在かもしれません。
+description: 本書は、著者の夢日記を元に創作された幻想掌編集です。Twitterへ投稿した140字の夢日記から、当時見た夢を思い出し、ときには改変し、修飾して、忘れてしまった箇所は空想で繋ぎあわせながら、六つの掌編を書き起こしました。
 ---
 
 <div class="flex book-info__page-wrapper">
