ヘッダー実装：PC版

--- a/index.html
+++ b/index.html
@@ -4,33 +4,15 @@ layout: layout.liquid
 
 <div class="home">
   <div class="home__firstview">
-    <section class="home__firstview-txt">
+    <section class="home__firstview-txt hidden">
       <div class="page-width">
-        <header class="home__header">
-          <h1 class="logo__wrapper">
-            <img src="/assets/img/logo.svg" alt="呼吸書房"  width="150" height="40" class="logo__image" loading="lazy">
-          </h1>
-          <div class="home__announce">
-            <p>last update 2024.1.6 イベント情報・小説一覧更新</p>
-          </div>  
-        </header>
         <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
         <p>書斎と書店、二つの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもご購入頂けます。</p>
-        <nav class="home__nav">
-          <ul class="home__nav-list">
-            <li><a href="/about">about</a></li>
-            <li><a href="/event">event</a></li>
-            <li><a href="/contact">contact</a></li>
-            <li><a href="/book">book-list</a></li>
-            <li><a href="/novel">web-novel</a></li>
-            <li><a href="/other">other-work</a></li>
-            <li><a href="/store">online-store</a></li>
-          </ul>
-        </nav>
         <div class="home__news">
           <div class="home__news-body">
             <p>2024.1.14：<a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 え-51 呼吸書房→<a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></p>
           </div>
+          <p>last update 2024.1.6 イベント情報・小説一覧更新</p>
         </div>
       </div>
     </section>
@@ -39,6 +21,20 @@ layout: layout.liquid
     </div>
   </div>
   <div class="home__contents">
+    <section class="home__firstview-txt">
+      <div class="page-width">
+        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
+        <p>書斎と書店、二つの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもご購入頂けます。</p>
+        <div class="home__news">
+          <span class="home__news-header">News</span>
+          <div class="home__news-body">
+            <p>2024.1.14：<a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 え-51 呼吸書房→<a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></p>
+          </div>
+          <p>last update 2024.1.6 イベント情報・小説一覧更新</p>
+        </div>
+      </div>
+    </section>
+
     <section id="booklist" class="home__section page-width">
       <header class="home__section-title">
         <h2 class="heading home__section-heading">book-list</h2>
