ニュースエリア調整

--- a/index.html
+++ b/index.html
@@ -4,18 +4,6 @@ layout: layout.liquid
 
 <div class="home">
   <div class="home__firstview">
-    <section class="home__firstview-txt hidden">
-      <div class="page-width">
-        <p>呼吸書房へようこそ。当サイトでは、私、風野湊による作品を公開しています。<br class="hidden-phone">路上で出会った本棚のように、どうぞゆっくりとお楽しみください。</p>
-        <p>書斎と書店、二つの意味を持つ「書房」の名のとおり、<br class="hidden-phone">一部の作品は書籍化し、販売を行っています。<br>出店イベントや委託販売先でもご購入頂けます。</p>
-        <div class="home__news">
-          <div class="home__news-body">
-            <p>2024.1.14：<a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 え-51 呼吸書房→<a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></p>
-          </div>
-          <p>last update 2024.1.10 ヘッダー改修</p>
-        </div>
-      </div>
-    </section>
     <div class="home__firstview-bg__wrapper" id="homeFirstView">
       {%- include '_includes/snippet-firstview-item' -%}
     </div>
@@ -28,7 +16,7 @@ layout: layout.liquid
         <div class="home__news">
           <dl class="home__news-body">
             <dt>update:</dt>
-            <dd>2024.1.6 イベント情報・小説一覧更新</dd>
+            <dd>2024.1.10 ヘッダー改修</dd>
             <dt>event:</dt>
             <dd>2024.1.14 <a href="https://bunfree.net/event/kyoto08/" target="_blank" rel="noopenner noreferrer">文学フリマ京都8</a> 出店予定｜京都市勧業館みやこめっせ 1F 第二展示場 え-51 呼吸書房→<a href="https://c.bunfree.net/e/b5E" target="_blank" rel="noopenner noreferrer">Webカタログ</a></dd>
           </dl>
